<resources>
    <string name="app_name">Games</string>
    <string name="more">More</string>
    <string name="new_game">New game</string>
    <string name="start_game">Start game</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="sudoku">Sudoku</string>
    <string name="kakuro">Kakuro</string>
    <string name="human_player">human</string>
    <string name="comp_player">Computer</string>
    <string name="easy_level">Easy</string>
    <string name="moderate_level">Moderate</string>
    <string name="hard_level">Hard</string>
    <string name="x_sign">X</string>
    <string name="o_sign">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="save_game">Save the game</string>
    <string name="load_game">Load a game</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="back_to_game">Return to my game</string>
    <string name="start_new_game">Start a new game</string>
    <string name="name_to_save">Please choose a name to save with</string>
    <string name="name_to_load_body">""</string>
    <string name="name_to_load_title">Please choose a game to load</string>
    <string name="theme_title">Please choose a theme</string>
    <string name="victory_body">Do you want to start a new game?</string>
    <string name="hi_there">He there,</string>
    <string name="game_exists_body">The name you have entered already exists.\nWould you lke to override it or rename it?</string>
    <string name="save_name_hint">game name</string>
    <string name="save_button">Save</string>
    <string name="choose_button">Choose</string>
    <string name="load_button">Load</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok">Ok</string>
    <string name="return_button">No, thanks</string>
    <string name="restart_button">let\'s go!</string>
    <string name="sorry">We are sorry,</string>
    <string name="something_went_wrong">Something went wrong, please try again.</string>
    <string name="override_button">Override</string>
    <string name="rename_button">Rename</string>
    <string name="well_done">Well done!</string>
    <string name="no_loaded_games">There are no saved games yet...</string>
    <string name="loaded_successfully">The game was Loaded successfully!!!</string>
    <string name="Saved_successfully">The game was Saved successfully!!!</string>
    <string name="number_of_hints">5</string>
</resources>
