<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingVertical="7dp"
    android:paddingHorizontal="7dp"
    android:id="@+id/mainLayout"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/kakuroBoard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="13">

<!--        <TableRow android:gravity="center" android:id="@+id/r00"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r01"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r02"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r03"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r04"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r05"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r06"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r07"/>-->
<!--        <TableRow android:gravity="center" android:id="@+id/r08"/>-->

    </TableLayout>

    <TableLayout
        android:id="@+id/choiceButtonsLayout"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="0dp"
        android:layout_weight="3.5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/n1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:layout_marginEnd="10dp"
                android:text="@string/number1"
                android:tag="1"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:layout_marginEnd="10dp"
                android:tag="2"
                android:text="@string/number2"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:layout_marginEnd="10dp"
                android:text="@string/number3"
                android:tag="3"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:tag="4"
                android:layout_marginEnd="10dp"
                android:text="@string/number4"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:text="@string/number5"
                android:tag="5"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/n6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:tag="6"
                android:layout_marginEnd="10dp"
                android:text="@string/number6"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:layout_marginEnd="10dp"
                android:tag="7"
                android:text="@string/number7"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:tag="8"
                android:layout_marginEnd="10dp"
                android:text="@string/number8"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/n9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@color/lightBlue"
                android:tag="9"
                android:text="@string/number9"
                android:layout_marginEnd="10dp"
                android:textColor="@color/lightBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/revert"
                style="@style/Widget.AppCompat.Button"
                android:tag="revert"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:background="@drawable/revert"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="0dp"
        android:gravity="center"
        android:layout_weight="1.8">

        <Button
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:id="@+id/startGameBtn"
            android:text="@string/start_game"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:id="@+id/newGameBtn"
            android:text="@string/new_game"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
